--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -7,6 +7,7 @@
 }
 
 .fellas{
+    width:100%;
     height: calc(90vw / 15);
     box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -15,7 +16,7 @@
     opacity:.85;
     display:flex;
     flex-direction: row;
-    justify-self: center;
+    justify-content: center;
     align-items: center;
     overflow: hidden;
 }
