--- a/styles/owned.module.css
+++ b/styles/owned.module.css
@@ -70,3 +70,12 @@
     color:#ffffff;
     font-family: kanit;
 }
+
+
+.threehnote {
+    margin-top:10px;
+    margin-bottom:-10px;
+    font-size: 12px;
+    color:#ccc9ff;
+    font-family: kanit;
+}
