--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,14 +22,12 @@
 html{
   background: #212429;
   display:flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  flex: 1 0;
+  flex-direction: row;
+  width:100% !important;
   overflow-x: hidden;
   -ms-overflow-style: none; 
   scrollbar-width: none;
-  margin: 0;
-  padding: 0;
 }
 
 html::-webkit-scrollbar { 
