--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -7,7 +7,7 @@
 }
 
 .fellas{
-    width:100%;
+    width:100vw;
     height: calc(90vw / 15);
     box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -16,7 +16,6 @@
     opacity:.85;
     display:flex;
     flex-direction: row;
-    flex: 1 0;
     justify-content: center;
     align-items: center;
     overflow: hidden;
