--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     flex-direction: column;
     width:100vw;
+    overflow-x: hidden;
 }
 
 .fellas{
@@ -30,7 +31,7 @@
 
 .introWrapper{
     position: relative;
-    min-width: 420px;
+    min-width: 100vw;
     margin-top: 50px;
     width:50%;
     display:flex;
@@ -60,7 +61,7 @@
 
 .aboutWrapper{
     position: relative;
-    min-width: 420px;
+    min-width: 100vw;
     margin-bottom: 50px;
     width:50%;
     display:flex;
