--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -31,9 +31,10 @@
 
 .introWrapper{
     position: relative;
-    min-width: 100vw;
     margin-top: 50px;
-    width:50%;
+    width:420px;
+    min-width: 50vw;
+    max-width: 100vw;
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -61,9 +62,10 @@
 
 .aboutWrapper{
     position: relative;
-    min-width: 100vw;
     margin-bottom: 50px;
-    width:50%;
+    width:420px;
+    min-width: 50vw;
+    max-width: 100vw;
     display:flex;
     flex-direction: column;
     justify-content: center;
