--- a/styles/collection.module.css
+++ b/styles/collection.module.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width:98%;
+    width:92vw;
     margin: 0 auto;
 }
 
@@ -31,8 +31,8 @@
 .fella {
     margin-top:10px;
     position: relative;
-    width:calc(92vw/10);
-    height:calc(92vw/10);
+    width:calc(86vw/10);
+    height:calc(86vw/10);
 }
 
 .filterbox {
@@ -256,8 +256,8 @@
     .fella {
         margin-top:10px;
         position: relative;
-        width:calc(92vw/8);
-        height:calc(92vw/8);
+        width:calc(86vw/8);
+        height:calc(86vw/8);
     }
   }
 
@@ -265,8 +265,8 @@
     .fella {
         margin-top:10px;
         position: relative;
-        width:calc(92vw/5);
-        height:calc(92vw/5);
+        width:calc(86vw/5);
+        height:calc(86vw/5);
     }
 
   }
