--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -12,7 +12,11 @@
     width:420px;
     display:flex;
     justify-content: center;
-    padding:20px;
+    align-items: center;
+    margin-top:40px;
+    margin-bottom:20px;
+    margin-left:10px;
+    margin-right:10px;
 }
 
 .navbarwrap h1{
@@ -25,14 +29,6 @@
     text-transform: uppercase;
     font-size: 20px;
     font-weight: 100;
-}
-
-.imagecont{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    max-width: 32px;
-    height: 100%;
 }
 
 .purpbutton{
@@ -58,4 +54,8 @@
 
 .brand:hover{
     cursor: default;
+}
+
+.brand img {
+    margin:20px;
 }
