--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -1,10 +1,11 @@
 .wrapper{
-    display:flex;
+    position:relative;
+    z-index: 10;
+    font-family: 'Segoe UI Emoji', 'Segoe UI', 'Arial', sans-serif;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    width:100vw;
-    overflow-x: hidden;
 }
 
 .fellas{
