--- a/styles/alert.module.css
+++ b/styles/alert.module.css
@@ -2,10 +2,11 @@
     display:flex;
     flex-direction: column;
     align-items: center;
-    position: absolute;
+    position: fixed;
     width:1px;
     z-index: 100;
     margin: 0 auto;
+    top:0;
     left:0;
     right:0;
     overflow: visible;
