--- a/styles/christmas.module.css
+++ b/styles/christmas.module.css
@@ -109,3 +109,18 @@
     color:#ffffff;
     font-size: 20px;
 }
+
+.header{
+    font-family:mana;
+    color:#ffffff;
+}
+
+.footer{
+    font-family:hamlin;
+    color:#ffffff;
+}
+
+.minttomint{
+    color:#ffffff;
+    font-family: moon;
+}
