--- a/styles/alert.module.css
+++ b/styles/alert.module.css
@@ -22,9 +22,12 @@
     flex-direction: row;
     border: 0px solid #ffffff;
     border-radius: 10px;
-    width: 420px;
+    width:420px;
+    min-width: 50vw;
+    max-width: 100vw;
     text-align: center;
     background-color: #0e0f11e2;
+    text-overflow: ellipsis;
 }
 
 .error {
