--- a/styles/alert.module.css
+++ b/styles/alert.module.css
@@ -22,8 +22,8 @@
     flex-direction: row;
     border: 0px solid #ffffff;
     border-radius: 10px;
-    width:420px;
-    min-width: 50vw;
+    min-width: 420px;
+    min-width: 420px;
     max-width: 100vw;
     text-align: center;
     background-color: #0e0f11e2;
