Mobile modal responsiveness fixes

--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -1,3 +1,8 @@
+.footer {
+    position: relative;
+    z-index: 2;
+}
+
 .wrapper {
     display: flex;
     position: relative;
@@ -55,7 +60,6 @@
 }
 
 .blockscout {
-    
     display:flex;
     justify-content: center;
     align-items: center;
