--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -173,7 +173,7 @@
 }
 
 .mateModal {
-    z-index: 420;
+    z-index: 42069;
     background-color: #00000090;
     backdrop-filter: blur(10px);
     position: fixed;
@@ -191,9 +191,10 @@
     margin:0;
     border:1px solid #ccc9ff;
     border-radius: 15px;
-    width: 40vw;
+    width: 420px;
     min-width: 40vw;
-    max-width: 100vw;
+    max-width: 98vw;
+    max-height: 95vh;
     background-color: #1c1c1c;
     display:flex;
     flex-direction: column;
@@ -207,6 +208,8 @@
     font-family: hamlin;
     color: #ffffffc9;
     width: 90%;
+    max-height: 100%;
+    overflow-y: scroll;
 }
 
 .modalClose {
