--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -30,6 +30,7 @@
 
 .container h1 {
     margin-top: 20px;
+    margin-bottom:-5px;
     font-size: 40px;
     color:#ffffff;
     font-family: righteous;
@@ -230,6 +231,45 @@
 .modalClose:hover {
     background-color: #ffffff09;
     cursor: pointer;
+}
+
+.ctc {
+    margin-top:10px;
+    font-family: coresans;
+    color:#ccc9ff;
+    padding:5px 20px;
+    height:30px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    border:1px solid #ccc9ff;
+    opacity:.75;
+    border-radius: 5px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+
+.ctc:hover {
+    opacity:1;
+    cursor:pointer;
+}
+
+.ctci {
+    margin-left:10px;
+    width:20px;
+}
+
+.ctcd {
+    margin-top:2px;
+    margin-bottom: 15px;
+    color:#ffffff44;
+    text-transform: uppercase;
+    font-family: moon;
+    font-size: 12px;
 }
 
   @media only screen and (max-width: 768px) {
