--- a/styles/alert.module.css
+++ b/styles/alert.module.css
@@ -22,7 +22,7 @@
     flex-direction: row;
     border: 0px solid #ffffff;
     border-radius: 10px;
-    min-width: 420px;
+    width: 420px;
     min-width: 420px;
     max-width: 100vw;
     text-align: center;
