--- a/styles/holders.module.css
+++ b/styles/holders.module.css
@@ -13,6 +13,10 @@
     align-items: center;
 }
 
+.wrapper a{
+    text-decoration: none;
+}
+
 .h1 {
     text-transform: uppercase;
     letter-spacing: 10px;
@@ -101,6 +105,10 @@
     opacity: 1 !important;
 }
 
+.fella :hover {
+    opacity:0.9;
+}
+
 .fellawrapper {
     margin: 0 auto;
     display:flex;
@@ -112,10 +120,10 @@
 }
 
 .h2 {
+    color: #ccc9ff;
     -webkit-user-select: none;
     -ms-user-select: none; 
     user-select: none; 
-    color:#ffffff;
     font-size: 16px;
     text-align: center;
     font-family: kanit;
@@ -124,10 +132,19 @@
 }
 
 .h2:hover {
+    opacity:.95;
     cursor: pointer;
 }
 
 .loading {
     text-align: center;
     color: #ffffff;
+}
+
+.threehnote {
+    margin-top:20px;
+    margin-bottom:-10px;
+    font-size: 16px;
+    color:#ffffff9c;
+    font-family: kanit;
 }
