--- a/styles/owned.module.css
+++ b/styles/owned.module.css
@@ -39,29 +39,49 @@
     align-items: center;
     margin: 20px;
     border: 1px solid #000000;
+    width:calc(96vw/7);
+    height:calc(96vw/7);
 }
 
 .fellaoverlay {
+    font-size: 30px;
     position: absolute;
     z-index: 98;
     width:100%;
     height:100%;
     opacity: 0;
     display:flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 .fellaoverlay:hover {
-    border: 1px solid #ccc9ff;
-    cursor: pointer;
+    border: 2px solid #ccc9ff;
     opacity: 1;
+    cursor: default;
     background-color: #1d1b1bd5;
     backdrop-filter: blur(2px);
 }
 
+.fellaoverlay svg {
+    color:#ffffff;
+    background-color: #0000005d;
+    width:20px;
+    padding:10px;
+    border:2px solid #ffffff;
+    border-radius: 10px;
+}
+
+.fellaoverlay svg:hover {
+    border:2px solid #ccc9ff;
+    color: #ccc9ff;
+    cursor: pointer;
+}
+
+
 .fellaoverlay h1 {
-    font-size: 1.6em;
+    font-size: 1.2em;
     color: #e3e3e3;
     font-family: righteous;
 }
@@ -73,9 +93,172 @@
 
 
 .threehnote {
-    margin-top:10px;
+    margin-top:20px;
     margin-bottom:-10px;
-    font-size: 12px;
-    color:#ccc9ff;
+    font-size: 16px;
+    color:#ffffff9c;
     font-family: kanit;
 }
+
+.actions {
+    width:100%;
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.action {
+    margin:5px;
+}
+
+.action a{
+    text-decoration: none;
+}
+
+.transferWrapper {
+    position: fixed;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 6969;
+    top:0;
+    bottom: 0;
+    right:0;
+    left:0;
+    background-color: #1d1b1beb;
+    backdrop-filter: blur(5px);
+}
+
+.transferConatiner {
+    margin:0;
+    border:1px solid #ccc9ff;
+    border-radius: 15px;
+    width: 420px;
+    min-width: 40vw;
+    max-width: 98vw;
+    max-height: 95vh;
+    background-color: #1c1c1c;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.modalHead {
+    text-align: center;
+    width:100%;
+    border-bottom: 1px solid #ffffff28;
+    padding: 5px 0px;
+    font-family: moon;
+    color:#ffffff92;
+    font-size: 20px;
+}
+
+.modalBody {
+    margin: 25px 0px;
+    width:100%;
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.transferFellaInfo {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.transferFellaInput {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.modalButtons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width:100%;
+    border-top: 1px solid #ffffff28;
+}
+
+.transferInput {
+    text-align: center;
+    font-family: coresans;
+    font-size: 14px;
+    letter-spacing: 1.4px;
+    width: 420px;
+    max-width: 94%;
+    height:40px;
+    background-color: #ffffff4a;
+    color:#ffffff;
+}
+
+.walletConfirm {
+    font-size: 10px;
+}
+
+.transferCancelBtn {
+    margin:20px;
+    color:#000000;
+    padding: 5px;
+    background-color: #ccc9ff;
+}
+
+.transferCancelBtn:hover {
+    opacity:0.9;
+    cursor: pointer;
+}
+
+.transferSendBtn:hover {
+    opacity:0.9;
+    cursor: pointer;
+}
+
+.transferSendBtn {
+    margin:20px;
+    padding: 5px;
+    color:#ffffff;
+    background-color: #5a51ff;
+}
+
+.hidden {
+    display: none;
+}
+
+@media only screen and (max-width: 768px) {
+    .fellacont {
+        position: relative;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 20px;
+        border: 1px solid #000000;
+        width:calc(96vw/4);
+        height:calc(96vw/4);
+    }
+    .transferInput {
+        letter-spacing: 1.0px;
+    }
+  }
+
+  @media only screen and (max-width: 480px) {
+    .fellacont {
+        position: relative;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 20px;
+        border: 1px solid #000000;
+        width:calc(96vw/2);
+        height:calc(96vw/2);
+    }
+  }
