--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,9 +40,40 @@
 }
 
 
+@keyframes lds-ripple {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 0;
+  }
+  4.9% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 0;
+  }
+  5% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
+  }
+}
+
 
 html{
-  background: #212429;
+  background: #313131;
   display:flex;
   flex-direction: row;
   width:100vw;
@@ -54,18 +85,19 @@ html::-webkit-scrollbar {
   display: none; 
 }
 
-html:before {
+html:after {
   height:100vh;
   min-height: -webkit-fill-available;
   overflow: hidden -moz-hidden-unscrollable;
   opacity: .15;
-  background: center url("../public/images/loot_room.png") ;
+  background: center url("../public/images/galaxy.gif") ;
   background-size: cover;
   background-repeat: no-repeat;
   content: "";
   position: fixed;
   left: 0; right: 0;
   top: 0; bottom: 0;
+  z-index: -1;
 }
 
 body{
@@ -78,6 +110,8 @@ body{
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  position: relative;
+  z-index: +1;
 }
 
 .hidden{
@@ -104,4 +138,23 @@ textarea:focus,
 button:focus {
     outline: none;
 }
+
+.lds-ripple {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid #fff;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 2s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+
+
 
