--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -69,3 +69,15 @@
 .brand img {
     margin:20px;
 }
+
+@media only screen and (max-width: 600px) {
+    .navbarwrap h1{
+        font-size: 16px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .navbarwrap h1{
+        font-size: 14px;
+    }
+}
