--- a/styles/market.module.css
+++ b/styles/market.module.css
@@ -36,7 +36,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width:98%;
+    width:98vw;
     margin: 0 auto;
     padding-bottom:20px;
 }
@@ -51,6 +51,10 @@
     border-radius: 8px;
     overflow: hidden;
     color:#ffffffd5;
+}
+
+.itemContainer img {
+    border-radius: 8px;
 }
 
 .itemContainer:hover {
@@ -422,6 +426,7 @@
 }
 
 .adminModalCenter {
+    overflow-x: hidden;
     overflow-y: scroll;
     display:flex;
     width:100%;
@@ -665,6 +670,8 @@
     align-items: center;
     width:100%;
     justify-content: space-around;
+    border-bottom: 1px solid #ffffff18;
+    padding:5px;
 }
 
 .adminModalItem p{
@@ -674,12 +681,13 @@
 .adminModalItem input[type="text"]
 {
     margin:2px;
-    font-size: 16px;
+    font-size: 14px;
     text-align: center;
-    font-family: moon;
+    font-family: coresans;
     color:#b1b1b1;
-    background: rgba(54, 54, 54, 0.144);
-    border-bottom: #ffffff2d 1px solid;
+    height:30px;
+    background: rgba(54, 54, 54, 0.404);
+    border-bottom: #ffffff00 1px solid;
     border-top:none;
     border-left:none;
     border-right:none;
@@ -689,6 +697,12 @@
     display:flex;
     flex-direction: column;
     width:300px;
+}
+
+.adminInputs p {
+    font-family: hamlin;
+    color:#ffffffbe;
+    margin: 5px;
 }
 
 .adminFunction {
@@ -789,7 +803,6 @@
 
 .ctc {
     background-color: #0000003a;
-    margin-top:30px;
     font-family: coresans;
     color:#ccc9ff;
     padding:5px 20px;
@@ -819,7 +832,7 @@
 }
 
 .ctcd {
-    margin-bottom: -20px;
+    margin-bottom: -10px;
     margin-top:2px;
     color:#ffffff96;
     text-transform: uppercase;
@@ -905,6 +918,78 @@
 .backToMarketsBtn p:hover {
     cursor: pointer;
     opacity: 1;
+}
+
+.marketDescription {
+    width:680px;
+    max-width: 98vw;
+    font-family: hamlin;
+    margin-bottom:0;
+    margin-top:20px;
+    color: #ffffff;
+    z-index: +1;
+    font-size: 14px;
+    text-align: center;
+}
+
+.registryOnboardCont {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.registryOnboardText {
+    text-align: center;
+    color:#ffffff;
+    font-size: 12px;
+    font-family: kanit;
+}
+
+.registryOnboardButton {
+    font-family: hamlin;
+    margin:10px;
+    padding: 10px 15px;
+    color:#ffffff;
+    background-color: #5a51ff;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.registryOnboardButton:hover {
+    opacity:0.85;
+    cursor: pointer;
+}
+
+.registryPriceDisclaim {
+    font-size: 12px;
+    font-family: kanit;
+    color:#ffffffa2;
+}
+
+.marketSocials {
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height:42.0px;
+    margin: 10px;
+}
+
+.marketSocials svg {
+    opacity:.8;
+
+    margin: 5px;
+    width:25px;
+}
+
+.marketSocials svg:hover {
+    opacity:1;
+    cursor:pointer;
+}
+
+.marketLink {
+    color:#ccc9fffd;
 }
 
 @media only screen and (max-width: 768px) {
