--- a/styles/market.module.css
+++ b/styles/market.module.css
@@ -527,11 +527,11 @@
 
 .marketControlz {
     display:flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height:50px;
     color:#ffffff;
     border-bottom:#ffffff21 1px solid;
 }
@@ -989,6 +989,19 @@
     color:#ccc9fffd;
 }
 
+.buyModalValue{
+    margin:1px;
+    color: #ffffff;
+    font-family: coresans;
+}
+
+.buyModalKey {
+    margin:1px;
+    font-family: kanit;
+    font-size: 14px;
+    color: #ffffff;
+}
+
 @media only screen and (max-width: 768px) {
     .spbLeft p {
         font-size: 28px;
@@ -1015,7 +1028,7 @@
         font-family: hamlin;
         font-size: 12px;
         margin:20px;
-        padding: 5px;
+        padding: 10px 30px;
         color:#ffffff;
         background-color: #5a51ff;
         border-radius: 5px;
@@ -1025,7 +1038,7 @@
     .confirmCancelBtn {
         font-size: 12px;
         margin:20px;
-        padding: 5px;
+        padding: 10px 30px;
         color:#000000;
         background-color: #ccc9ff;
         border-radius: 5px;
@@ -1035,7 +1048,7 @@
         text-align: center;
         font-size: 12px;
         margin:20px;
-        padding: 5px;
+        padding: 10px 30px;
         color:#ffffff;
         font-family: hamlin;
         background-color: #5a51ff86;
