--- a/styles/globals.css
+++ b/styles/globals.css
@@ -163,4 +163,113 @@ button:focus {
   animation-delay: -0.5s;
 }
 
+.txWrapper {
+  overflow: hidden;
+  background-color: #000000c2;
+  backdrop-filter: blur(20px);
+  z-index: +696969;
+  position: fixed;
+  top:0;
+  height:100vh;
+  left: 0;
+  width:100vw;
+  justify-content: center;
+  align-items: center;
+}
 
+.txContainer{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 200px;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 8px;
+  text-align: center;
+}
+
+.txContainer h1{
+  color:#ffffff;
+  font-family: inter;
+  font-weight: lighter;
+  margin-top: 190px;
+  font-size: 24px;
+  line-height: 35px;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+}
+
+.lds-grid {
+  width: 300px;
+  height: 200px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80px;
+  height: 80px;
+}
+.lds-grid div {
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #fff;
+  animation: lds-grid 1.2s linear infinite;
+}
+.lds-grid div:nth-child(1) {
+  top: 8px;
+  left: 8px;
+  animation-delay: 0s;
+}
+.lds-grid div:nth-child(2) {
+  top: 8px;
+  left: 32px;
+  animation-delay: -0.4s;
+}
+.lds-grid div:nth-child(3) {
+  top: 8px;
+  left: 56px;
+  animation-delay: -0.8s;
+}
+.lds-grid div:nth-child(4) {
+  top: 32px;
+  left: 8px;
+  animation-delay: -0.4s;
+}
+.lds-grid div:nth-child(5) {
+  top: 32px;
+  left: 32px;
+  animation-delay: -0.8s;
+}
+.lds-grid div:nth-child(6) {
+  top: 32px;
+  left: 56px;
+  animation-delay: -1.2s;
+}
+.lds-grid div:nth-child(7) {
+  top: 56px;
+  left: 8px;
+  animation-delay: -0.8s;
+}
+.lds-grid div:nth-child(8) {
+  top: 56px;
+  left: 32px;
+  animation-delay: -1.2s;
+}
+.lds-grid div:nth-child(9) {
+  top: 56px;
+  left: 56px;
+  animation-delay: -1.6s;
+}
+@keyframes lds-grid {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+}
