--- a/styles/globals.css
+++ b/styles/globals.css
@@ -178,17 +178,16 @@ button:focus {
 }
 
 .txContainer{
-  box-shadow: 0 0 200px 20px #00bbd456;
   display:flex;
   justify-content: center;
   align-items: center;
-  width: 80px;
-  height: 80px;
+  width: 300px;
+  height: 200px;
   position: absolute;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border: 1px solid #ffffff15;
+  border-radius: 8px;
   text-align: center;
 }
 
