--- a/styles/market.module.css
+++ b/styles/market.module.css
@@ -232,6 +232,12 @@
     background-color: #ffffff00;
     overflow-y: scroll;
     overflow-x: hidden;
+    -ms-overflow-style: none; 
+    scrollbar-width: none;
+}
+
+.contractList::-webkit-scrollbar {
+    display: none;
 }
 
 .clItem {
@@ -278,6 +284,7 @@
 }
 
 .clItemL {
+    height:100px;
     margin-left:20px;
     display:flex;
     flex-direction: column;
@@ -285,7 +292,6 @@
 }
 
 .clItemL h1 {
-    padding:0;
     color: #dddddd;
     margin:0;
     font-family: kanit;
@@ -434,6 +440,8 @@
 .adminModalCenter {
     overflow-x: hidden;
     overflow-y: scroll;
+    -ms-overflow-style: none; 
+    scrollbar-width: none;
     display:flex;
     width:100%;
     height:100%;
@@ -441,6 +449,10 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #2e2e2e;
+}
+
+.adminModalCenter::-webkit-scrollbar {
+    display: none;
 }
 
 .confirmModalInfoItem {
